--- a/Ecommerce/frontend/public/index.html
+++ b/Ecommerce/frontend/public/index.html
@@ -21,7 +21,7 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <title>Welcome To Swift Buy</title>
+    <title>Welcome To 23 Jewels</title>
     <style>
       * {
         font-family: "Inter", sans-serif;
